// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`NowPlayingCard > matches snapshot when paused 1`] = `
<a
  aria-label="Open in Spotify: Test Track"
  class="block w-full no-underline"
  href="https://open.spotify.com/track/play-1"
  rel="noopener noreferrer"
  target="_blank"
>
  <div
    class="relative grid w-full grid-cols-[auto_1fr] items-center gap-x-4 gap-y-2 overflow-hidden rounded-3xl border border-[#1db95433] bg-[#121212] px-4 py-4 shadow-[0_8px_20px_rgba(0,0,0,0.35)] transition-all duration-300"
    style="opacity: 1; transform: none;"
    tabindex="0"
  >
    <div
      class="relative h-14 w-14 overflow-hidden rounded-2xl shadow-[0_8px_20px_rgba(0,0,0,0.35)]"
    >
      <img
        alt="Album"
        class="h-full w-full rounded-2xl object-cover scale-[1.012] transition-transform duration-[900ms] ease-out hover:scale-[1.02]"
        decoding="async"
        loading="lazy"
        referrerpolicy="no-referrer"
        src="https://example.com/cover.jpg"
      />
    </div>
    <div
      aria-live="polite"
      class="flex min-w-0 flex-col gap-2"
    >
      <h3
        class="text-base font-extrabold leading-tight tracking-tight text-white"
      >
        Test Track
      </h3>
      <p
        class="text-sm text-[#b3b3b3] opacity-90"
      >
        Tester
      </p>
      <span
        class="inline-flex w-fit items-center rounded-full border border-gray-600 bg-gray-800 px-3 py-1 text-xs font-bold uppercase text-gray-300"
      >
        Paused
      </span>
      <div
        class="flex w-full items-center gap-2"
      >
        <div
          aria-label="Track progress"
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="17"
          class="relative h-1.5 flex-1 overflow-hidden rounded-full bg-[#2a2a2a]"
          role="progressbar"
        >
          <div
            class="h-full rounded-full bg-[#1db954] transition-all"
            style="width: 16.666666666666664%;"
          />
        </div>
        <span
          class="whitespace-nowrap text-xs text-[#b3b3b3]"
        >
          0:30
           / 
          3:00
        </span>
      </div>
    </div>
  </div>
</a>
`;

exports[`NowPlayingCard > matches snapshot when playing 1`] = `
<a
  aria-label="Open in Spotify: Test Track"
  class="block w-full no-underline"
  href="https://open.spotify.com/track/play-1"
  rel="noopener noreferrer"
  target="_blank"
>
  <div
    class="relative grid w-full grid-cols-[auto_1fr] items-center gap-x-4 gap-y-2 overflow-hidden rounded-3xl border border-[#1db95433] bg-[#121212] px-4 py-4 shadow-[0_8px_20px_rgba(0,0,0,0.35)] transition-all duration-300"
    style="opacity: 1; transform: none;"
    tabindex="0"
  >
    <div
      class="relative h-14 w-14 overflow-hidden rounded-2xl shadow-[0_8px_20px_rgba(0,0,0,0.35)]"
    >
      <img
        alt="Album"
        class="h-full w-full rounded-2xl object-cover scale-[1.012] transition-transform duration-[900ms] ease-out hover:scale-[1.02]"
        decoding="async"
        loading="lazy"
        referrerpolicy="no-referrer"
        src="https://example.com/cover.jpg"
      />
    </div>
    <div
      aria-live="polite"
      class="flex min-w-0 flex-col gap-2"
    >
      <h3
        class="text-base font-extrabold leading-tight tracking-tight text-white"
      >
        Test Track
      </h3>
      <p
        class="text-sm text-[#b3b3b3] opacity-90"
      >
        Tester
      </p>
      <div
        class="flex w-full items-center gap-2"
      >
        <div
          aria-label="Track progress"
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="17"
          class="relative h-1.5 flex-1 overflow-hidden rounded-full bg-[#2a2a2a]"
          role="progressbar"
        >
          <div
            class="h-full rounded-full bg-[#1db954] transition-all"
            style="width: 16.666666666666664%;"
          />
        </div>
        <span
          class="whitespace-nowrap text-xs text-[#b3b3b3]"
        >
          0:30
           / 
          3:00
        </span>
      </div>
    </div>
  </div>
</a>
`;
